--- a/HamburguesaMexicana.html
+++ b/HamburguesaMexicana.html
@@ -25,7 +25,7 @@
         <div class="container">
           <div class="plate__body">
             <h2 class="plate__title">Hamburguesa Mexicana</h2>
-            <p class="plate__text">Nuestra hamburguesa casera dentro de tortillas crocantes, servida con nachos, guacamole, pico de gallo y crema agria.</p>
+            <p class="plate__text">Nuestra hamburguesa casera dentro de tortillas crocantes, servida con nachos, guacamole y pico de gallo</p>
             <p class="plate__price">Bs&nbsp;34</p>
           </div>
         </div>
